<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NETester</string>
    <string name="menu_act_settings">Configuração</string>
    <string name="menu_act_history">Histórico</string>
    <string name="menu_act_clean">Limpar Histórico</string>
    <string name="tv_download">Download:</string>
    <string name="tv_upload">Upload:</string>
    <string name="tv_ping_medio_tcp">Ping Médio (TCP):</string>
    <string name="tv_ping_min_tcp">Ping Min. (TCP):</string>
    <string name="tv_ping_max_tcp">Ping Max. (TCP):</string>
    <string name="tv_ping_medio_udp">Ping Médio (UDP):</string>
    <string name="tv_ping_min_udp">Ping Min. (UDP):</string>
    <string name="tv_ping_max_udp">Ping Max. (UDP):</string>
    <string name="bt_test_internet">Internet Test</string>
    <string name="bt_test_local">Local Test</string>
    <string name="tv_prot_tcp">TCP</string>
    <string name="tv_prot_udp">UDP</string>
    <string name="tv_latencia_vlr">0 ms</string>
    <string name="tv_data_vlr">0.000 Mbit/s</string>
    <string name="tv_date_vlr">Data: 01/01/1960 12:33</string>
    <string name="title_activity_discovery">Descoberta Servico</string>
    <string name="tb_descobre_on">Descobrindo...</string>
    <string name="tb_descobre_off">Descubra Serviços</string>
    <string name="tb_existe_servico">Existe Serviço?</string>
    <string name="textview_tipo_ping">Status: Não testado</string>
    <string name="tv_jitter">Jitter (UDP):</string>
    <string name="tv_perda_pacote">Perda de Pacote:</string>
    <string name="tv_vlr_zero">0</string>
    <string name="title_activity_history">Histórico</string>
    <string name="hist_cab_data">Data</string>
    <string name="hist_cab_tipo">Tipo</string>
    <string name="hist_cab_down">Down\nMBits</string>
    <string name="hist_cab_up">Up\nMBits</string>
    <string name="hist_cab_ping">Ping</string>
    <string name="title_activity_history_detail">Detalhes</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="tv_tipo_rede">Tipo de Rede</string>
    <string name="tv_tipo">Tipo</string>
    <string name="status_nenhuma_perda_pacote">Nenhuma</string>
    <string name="status_feedback_35">Terminou o teste do Ping.</string>
    <string name="status_feedback_55">Iniciando Teste do Download.</string>
    <string name="status_feedback_75">Iniciando Teste do Upload.</string>
    <string name="status_feedback_100">Terminou o teste de sua conexão!</string>
    <string name="status_message_offline">Servidor offline ou cogestionado!</string>
    <string name="status_message_teste_local">Teste Local Finalizada!</string>
    <string name="status_message_teste_internet">Teste na Internet Finalizada!</string>
    <string name="status_message_executing_test">Executando Teste...</string>
    <string name="toast_discovery_service">Serviço de Ping Local Descoberto!</string>
    <string name="alert_gps_title">Configuração da Localização</string>
    <string name="alert_gps_message">A localização por wifi e rede móvel não está habilitado.\n\nVocê gostaria de configurar agora?</string>
    <string name="alert_exit_title">Sair</string>
    <string name="alert_exit_message">Encerrar aplicação?</string>
    <string name="alert_exit_message_testing">Teste em andamento, deseja sair?</string>
    <string name="alert_connection_title">Conexão com Internet</string>
    <string name="alert_connection_message">Você não está conectado a Internet</string>
    <string name="alert_history_title">Limpar</string>
    <string name="alert_history_message">Deseja limpar histórico?</string>
    <string name="title_activity_hunter_signal">Hunter Signal</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancelar</string>
    <string name="button_configuration">Configure</string>
    <string name="button_late">Mais Tarde</string>
    <string name="button_start">Iniciar</string>
    <string name="button_stop">Parar</string>
    <string name="action_frequency">Frequencia</string>
    <string name="action_export">Exportar Banco</string>
    <string name="alert_freq_title">Qual a frequencia da captura?</string>
	<string name="inint_string">Status: Serviço Desligado (1s)\n</string>
    
</resources>