<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:animateLayoutChanges="true"
    android:background="@android:color/black" 
    tools:context=".HistoryActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/TextView04"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight=".2"
            android:text="@string/hist_cab_tipo"
            android:textColor="@android:color/white"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/TextView03"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight=".2"
            android:text="@string/hist_cab_data"
            android:textColor="@android:color/white"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/TextView02"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight=".23"
            android:text="@string/hist_cab_down"
            android:textColor="@android:color/white"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/TextView05"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight=".23"
            android:text="@string/hist_cab_up"
            android:textColor="@android:color/white"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight=".14"
            android:text="@string/hist_cab_ping"
            android:textColor="@android:color/white"
            android:textSize="17sp" />

    </LinearLayout>

    <ListView
        android:id="@+id/hist_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </ListView>

</LinearLayout>
