<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayoutMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:animateLayoutChanges="true" 
    tools:context=".HistoryDetailActivity$DetailFragment" >

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/darker_gray"
        android:gravity="center"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/darker_gray"
            android:gravity="center"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/black"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/hist_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/tv_date_vlr"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:layout_marginLeft="10dp"
                        android:text="@string/tv_download"
                        android:textColor="@android:color/white"
                        android:textSize="17sp" />

                    <TextView
                        android:id="@+id/hist_banda_download"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="68dp"
                        android:hint="@string/tv_data_vlr"
                        android:textColor="#ADD8E6"
                        android:textSize="17sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:gravity="center"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/tv_upload"
                        android:textColor="@android:color/white"
                        android:textSize="17sp" />

                    <TextView
                        android:id="@+id/hist_banda_upload"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="90dp"
                        android:hint="@string/tv_data_vlr"
                        android:textColor="#ADD8E6"
                        android:textSize="17sp" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:background="@android:color/black"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:text="@string/tv_ping_min_udp"
                        android:textColor="@android:color/white"
                        android:textSize="17sp" />

                    <TextView
                        android:id="@+id/hist_ping_min_udp"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:hint="@string/tv_latencia_vlr"
                        android:textColor="#ADD8E6"
                        android:textSize="17sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_ping_medio_udp"
                        android:textColor="@android:color/white"
                        android:textSize="17sp" />

                    <TextView
                        android:id="@+id/hist_ping_med_udp"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="7dp"
                        android:hint="@string/tv_latencia_vlr"
                        android:textColor="#ADD8E6"
                        android:textSize="17sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:gravity="center"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_ping_max_udp"
                        android:textColor="@android:color/white"
                        android:textSize="17sp" />

                    <TextView
                        android:id="@+id/hist_ping_max_udp"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="17dp"
                        android:hint="@string/tv_latencia_vlr"
                        android:textColor="#ADD8E6"
                        android:textSize="17sp" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:background="@android:color/black"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:text="@string/tv_ping_min_tcp"
                        android:textColor="@android:color/white"
                        android:textSize="17sp" />

                    <TextView
                        android:id="@+id/hist_ping_min_tcp"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:hint="@string/tv_latencia_vlr"
                        android:textColor="#ADD8E6"
                        android:textSize="17sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_ping_medio_tcp"
                        android:textColor="@android:color/white"
                        android:textSize="17sp" />

                    <TextView
                        android:id="@+id/hist_ping_med_tcp"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="6dp"
                        android:hint="@string/tv_latencia_vlr"
                        android:textColor="#ADD8E6"
                        android:textSize="17sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:gravity="center"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_ping_max_tcp"
                        android:textColor="@android:color/white"
                        android:textSize="17sp" />

                    <TextView
                        android:id="@+id/hist_ping_max_tcp"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="17dp"
                        android:hint="@string/tv_latencia_vlr"
                        android:textColor="#ADD8E6"
                        android:textSize="17sp" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:background="@android:color/black"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_tipo_rede"
                        android:textColor="@android:color/white"
                        android:textSize="17sp" />

                    <TextView
                        android:id="@+id/hist_type"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="44dp"
                        android:hint="@string/tv_tipo"
                        android:textColor="#ADD8E6"
                        android:textSize="17sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:text="@string/tv_jitter"
                        android:textColor="@android:color/white"
                        android:textSize="17sp" />

                    <TextView
                        android:id="@+id/hist_jitter"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="50dp"
                        android:hint="@string/tv_latencia_vlr"
                        android:textColor="#ADD8E6"
                        android:textSize="17sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:gravity="center"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_perda_pacote"
                        android:textColor="@android:color/white"
                        android:textSize="17sp" />

                    <TextView
                        android:id="@+id/hist_perda_pacote"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="14dp"
                        android:hint="@string/tv_vlr_zero"
                        android:textColor="#ADD8E6"
                        android:textSize="17sp" />

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
